--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
+bleach==6.1.0
 certifi==2024.8.30
 click==8.1.7
 colorama==0.4.6
 distro==1.9.0
 Django==5.1.2
+django-cors-headers==4.5.0
 django-environ==0.11.2
 django-filter==24.3
 django-rest-framework==0.1.0
@@ -23,6 +25,7 @@ pydantic-settings==2.5.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
 python-json-logger==2.0.7
+six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
 starlette==0.38.6
@@ -31,3 +34,4 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
 uvicorn==0.31.1
+webencodings==0.5.1
