--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ django-environ==0.11.2
 django-filter==24.3
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 fastapi==0.115.0
 h11==0.14.0
 httpcore==1.0.6
@@ -23,6 +24,7 @@ openai==1.51.2
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
+PyJWT==2.9.0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 six==1.16.0
