--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.3",
     "@tanstack/react-query": "^5.59.14",
     "axios": "^1.7.7",
+    "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
