--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,15 @@
     "@mui/material": "^6.1.3",
     "@tanstack/react-query": "^5.59.14",
     "axios": "^1.7.7",
+    "he": "^1.2.0",
     "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
