--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "he": "^1.2.0",
     "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
