--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,11 @@ anyio==4.6.0
 asgiref==3.8.1
 bleach==6.1.0
 certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.3
 distro==1.9.0
 Django==5.1.2
 django-cors-headers==4.5.0
@@ -21,12 +24,15 @@ idna==3.10
 jiter==0.6.1
 Markdown==3.7
 openai==1.51.2
+pillow==11.0.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
+reportlab==4.2.5
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
