--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "he": "^1.2.0",
+    "jwt-decode": "^4.0.0",
     "material-ui-popup-state": "^5.3.1",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
