Increased page limit for rest_framework settings and updated .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ db.sqlite3
 db.sqlite3-journal
 media
 
+# Keys
+keys/
+
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
 *.py[cod]
