--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ media
 # Keys
 keys/
 
+# macOS stuff
+.DS_Store
+
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
 *.py[cod]
