--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.3",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "he": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "material-ui-popup-state": "^5.3.1",
