--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,17 @@
+amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
+billiard==4.2.1
 bleach==6.1.0
+celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
 chardet==5.2.0
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 cryptography==43.0.3
 distro==1.9.0
@@ -22,16 +28,20 @@ httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
 jiter==0.6.1
+kombu==5.4.2
 Markdown==3.7
 openai==1.51.2
 pillow==11.0.0
+prompt_toolkit==3.0.48
 pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
+redis==5.2.0
 reportlab==4.2.5
 six==1.16.0
 sniffio==1.3.1
@@ -42,4 +52,6 @@ tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
 uvicorn==0.31.1
+vine==5.1.0
+wcwidth==0.2.13
 webencodings==0.5.1
