--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,10 +19,13 @@ Django==5.1.2
 django-cors-headers==4.5.0
 django-environ==0.11.2
 django-filter==24.3
+django-json-widget==2.0.1
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+dnspython==2.7.0
 fastapi==0.115.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
@@ -51,7 +54,6 @@ tenacity==9.0.0
 tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.2
-uvicorn==0.31.1
 vine==5.1.0
 wcwidth==0.2.13
 webencodings==0.5.1
