--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "he": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "material-ui-popup-state": "^5.3.1",
+    "motion": "^11.11.14",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
