--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "jwt-decode": "^4.0.0",
     "material-ui-popup-state": "^5.3.1",
     "motion": "^11.11.14",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
+    "react-simple-code-editor": "^0.14.1",
     "react-toastify": "^10.0.6",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0"
