--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ bleach==6.1.0
 celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
+channels==4.2.0
 chardet==5.2.0
 click==8.1.7
 click-didyoumean==0.3.1
@@ -33,6 +34,7 @@ idna==3.10
 jiter==0.6.1
 kombu==5.4.2
 Markdown==3.7
+msgpack==1.1.0
 openai==1.51.2
 pillow==11.0.0
 prompt_toolkit==3.0.48
