--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.27.0",
     "react-simple-code-editor": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "rehype-highlight": "^7.0.1",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "uuid": "^11.0.3"
