--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "date-fns": "^4.1.0",
     "he": "^1.2.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "material-ui-popup-state": "^5.3.1",
     "motion": "^11.11.14",
     "prismjs": "^1.29.0",
@@ -31,6 +33,7 @@
     "react-simple-code-editor": "^0.14.1",
     "react-toastify": "^10.0.6",
     "rehype-highlight": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "uuid": "^11.0.3"
