Created template .env file for project initialization. Updated dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ celerybeat.pid
 
 # Environments
 .env
+!.env.template  # Exclude all .env files but explicitly include .env.template
 .venv
 env/
 venv/
