--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,9 @@ amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 billiard==4.2.1
 bleach==6.1.0
 celery==5.4.0
@@ -9,12 +12,15 @@ certifi==2024.8.30
 cffi==1.17.1
 channels==4.2.0
 chardet==5.2.0
+charset-normalizer==3.4.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+constantly==23.10.4
 cryptography==43.0.3
+daphne==4.1.2
 distro==1.9.0
 Django==5.1.2
 django-cors-headers==4.5.0
@@ -30,7 +36,9 @@ greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 jiter==0.6.1
 kombu==5.4.2
 Markdown==3.7
@@ -38,24 +46,33 @@ msgpack==1.1.0
 openai==1.51.2
 pillow==11.0.0
 prompt_toolkit==3.0.48
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
+pyOpenSSL==24.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
-redis==5.2.0
 reportlab==4.2.5
+requests==2.32.3
+service-identity==24.2.0
+setuptools==75.6.0
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
 starlette==0.38.6
 tenacity==9.0.0
 tqdm==4.66.5
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
 webencodings==0.5.1
+zope.interface==7.2
