--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,15 +19,18 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 constantly==23.10.4
+cron-descriptor==1.4.5
 cryptography==43.0.3
 daphne==4.1.2
 distro==1.9.0
 Django==5.1.2
+django-celery-beat==2.7.0
 django-cors-headers==4.5.0
 django-environ==0.11.2
 django-filter==24.3
 django-json-widget==2.0.1
 django-rest-framework==0.1.0
+django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 dnspython==2.7.0
@@ -54,6 +57,7 @@ pydantic-settings==2.5.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
 pyOpenSSL==24.3.0
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
