--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "he": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -32,6 +33,7 @@
     "react-router-dom": "^6.27.0",
     "react-simple-code-editor": "^0.14.1",
     "react-toastify": "^10.0.6",
+    "recharts": "^3.0.2",
     "rehype-highlight": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
